Boton para volver atras despues de buscar

--- a/src/app/templates/resultados_busqueda.html
+++ b/src/app/templates/resultados_busqueda.html
@@ -17,4 +17,14 @@
       {% endif %}
     {% block content %}{% endblock %}
   </body>
+  <style>
+      .button {
+          display: inline-block;
+          padding: 3px 5px;
+          border: 1px solid #000;
+          background: #eee;
+      }
+  
+  </style>
+  <a href="/buscar" class="button">Volver atras</a>
 </html>
