Agregar bar una vez que llenas el formulario

--- a/src/app/templates/resultados_busqueda.html
+++ b/src/app/templates/resultados_busqueda.html
@@ -9,7 +9,7 @@
       {% if bares %}
         <ul>
         {% for bar in bares %}
-        <li> <b>{{ bar.bar().nombre() }}</b> está cerca tuyo! Esta en {{bar.bar().direccion().direccion() }} </li>
+        <li> <b>{{ bar.bar().nombre() }}</b> está cerca tuyo! Está en {{bar.bar().direccion().direccion() }} </li>
         {% endfor %}
         </ul>
       {% else %}
@@ -26,5 +26,5 @@
       }
   
   </style>
-  <a href="/buscar" class="button">Volver atras</a>
+  <a href="/buscar" class="button">Volver atrás</a>
 </html>
