--- a/src/app/templates/botonAgregar.html
+++ b/src/app/templates/botonAgregar.html
@@ -1,3 +1,18 @@
-<form method=get action="/agregar">
-  <input type=submit value=Agregar>
-</form>
+<html>
+  <body>
+      {% if anon%}
+        <form method=get action="/login">
+          <input type=submit value=LogIn>
+        </form>
+      {% else%}
+        <form method=get action="/logout">
+          <input type=submit value=LogOut>
+        </form>
+      {% endif %}
+      {% if mod%}
+        <form method=get action="/agregar">
+          <input type=submit value=Agregar>
+        </form>
+      {% endif %}
+  </body>
+</html>
