class Direccion -> class Ubicacion

--- a/src/app/templates/resultados_busqueda.html
+++ b/src/app/templates/resultados_busqueda.html
@@ -9,7 +9,7 @@
       {% if bares %}
         <ul>
         {% for bar in bares %}
-        <li> <b>{{ bar.bar().nombre() }}</b> está cerca tuyo! Está en {{bar.bar().direccion().direccion() }} </li>
+        <li> <b>{{ bar.bar().nombre() }}</b> está cerca tuyo! Está en {{bar.bar().ubicacion().direccion() }} </li>
         {% endfor %}
         </ul>
       {% else %}
