--- a/src/app/templates/buscar.html
+++ b/src/app/templates/buscar.html
@@ -1,12 +1,26 @@
-{% from "_formhelpers.html" import render_field %}
-<form method=post action="/buscar">
-    {{ form.csrf_token }}
-  <dl>
-    {{ render_field(form.direccion_actual) }}
-  </dl>
-  <p><input type=submit value=Buscar>
-    <form method=get action="/home">
-      <input type=submit value=Volver>
-    </form>
-</form>
+  <head>
+    <title>ISW1 - TP1</title>
 
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
+
+  </head>
+    <div align="center"><a  href="/">ISW1 - TP1</a></div>
+
+    <table id="tabla1" align = "center">
+          <tr align="center" width="33%"><td>
+			{% from "_formhelpers.html" import render_field %}
+			<form method=post action="/buscar">
+			    {{ form.csrf_token }}
+			  <dl>
+			    {{ render_field(form.direccion_actual) }}
+			  </dl>
+			  <p><input type=submit value=Buscar>
+			    <form method=get action="/home">
+			      <input type=submit value=Volver>
+			    </form>
+			  </p>
+			</form>
+
+          </td></tr>
+    </table>
