--- a/src/app/templates/resultados_busqueda.html
+++ b/src/app/templates/resultados_busqueda.html
@@ -8,57 +8,62 @@
   </head>
   <body>
 
-    <div><a href="/">ISW1 - TP1</a></div>
-    <hr>
-      <p> Estás en {{ dirusuario.direccion() }} </p>
-      {% if bares %}
+    <div align="center"><a href="/" >ISW1 - TP1</a></div>
 
-        {% for bar in bares %}
+    <table id="tabla2" align ="center">
+          <tr><td>
+            <hr>
+              <p> Estás en {{ dirusuario.direccion() }} </p>
+              {% if bares %}
 
-          {% set perfilDeBar = bar[1] %}
-          {% set elBar = perfilDeBar.bar() %}
-          {% set nombre = elBar.nombre() %}
-          {% set direccion = elBar.ubicacion().direccion() %}
+                {% for bar in bares %}
 
-          <div>
-            <b>{{ nombre }}</b>
-              está cerca tuyo! Está en {{ direccion }},
-              a una distancia de {{ bar[0] }} metros de vos.
+                  {% set perfilDeBar = bar[1] %}
+                  {% set elBar = perfilDeBar.bar() %}
+                  {% set nombre = elBar.nombre() %}
+                  {% set direccion = elBar.ubicacion().direccion() %}
 
-            <a href = "javascript:void(0)" onclick = "document.getElementById('{{ direccion.replace(' ', '') }}').style.display='block';document.getElementById('fade').style.display='block'">Ver más</a></p>
+                  <div>
+                    <b>{{ nombre }}</b>
+                      está cerca tuyo! Está en {{ direccion }},
+                      a una distancia de {{ bar[0] }} metros de vos.
 
-            <div id="{{ direccion.replace(' ', '') }}" class="answer"> 
-              {% include 'perfil_de_bar.html' %} 
-              <a href = "javascript:void(0)" onclick = "document.getElementById('{{ direccion.replace(' ', '') }}').style.display='none';document.getElementById('fade').style.display='none'">X</a>
-              </div>
-            <div id="fade" class="black_overlay"></div>
+                    <a href = "javascript:void(0)" onclick = "document.getElementById('{{ direccion.replace(' ', '') }}').style.display='block';document.getElementById('fade').style.display='block'">Ver más</a></p>
 
-          </div>
+                    <div id="{{ direccion.replace(' ', '') }}" class="answer"> 
+                      {% include 'perfil_de_bar.html' %} 
+                      <a href = "javascript:void(0)" onclick = "document.getElementById('{{ direccion.replace(' ', '') }}').style.display='none';document.getElementById('fade').style.display='none'">X</a>
+                      </div>
+                    <div id="fade" class="black_overlay"></div>
 
-        {% endfor %}
+                  </div>
 
-        <div class="centered-block" id="mapa">
-        {{
-            googlemap(
-                "simple-map",
-                lat=dirusuario.latlong()[0],
-                lng=dirusuario.latlong()[1],
-                markers=locations,
-                maptype_control=0,
-                zoom = 16,
-                cls = "mapStyle"
-            )
-        }}
-        <!-- http://brunorocha.org/python/flask/flask-google-maps-plus-how-to-write-a-flask-extension.html -->
-        </div> 
+                {% endfor %}
 
-      {% else %}
-         <p>No se han encontrado bares cerca :(</p>
-      {% endif %}
-    {% block content %}{% endblock %}
-    <form method=get action="/buscar">
-      <input type=submit value=Volver>
-    </form>
+                <div class="centered-block" id="mapa">
+                {{
+                    googlemap(
+                        "simple-map",
+                        lat=dirusuario.latlong()[0],
+                        lng=dirusuario.latlong()[1],
+                        markers=locations,
+                        maptype_control=0,
+                        zoom = 16,
+                        cls = "mapStyle"
+                    )
+                }}
+                <!-- http://brunorocha.org/python/flask/flask-google-maps-plus-how-to-write-a-flask-extension.html -->
+                </div> 
+
+              {% else %}
+                 <p>No se han encontrado bares cerca :(</p>
+              {% endif %}
+            {% block content %}{% endblock %}
+            <form method=get action="/buscar">
+              <input type=submit class='button1' value=Volver>
+            </form>
+          </td></tr>
+    </table>
 
   </body>
 </html>
