arreglo bug de volver de forma cabeza

--- a/src/app/templates/buscar.html
+++ b/src/app/templates/buscar.html
@@ -15,11 +15,8 @@
 			  <dl>
 			    {{ render_field(form.direccion_actual) }}
 			  </dl>
-			  <p><input type=submit value=Buscar>
-			    <form method=get action="/home">
-			      <input type=submit value=Volver>
-			    </form>
-			  </p>
+			  <p><input type=submit value=Buscar></p>
+        <p><a  href="/">Volver</a></p>
 			</form>
 
           </td></tr>
