--- a/src/app/templates/buscar.html
+++ b/src/app/templates/buscar.html
@@ -15,7 +15,7 @@
 			  <dl>
 			    {{ render_field(form.direccion_actual) }}
 			  </dl>
-			  <p><input type=submit value=Buscar></p>
+			  <p><input type=submit class='button1' value=Buscar></p>
         <p><a  href="/">Volver</a></p>
 			</form>
 
