--- a/src/app/templates/login.html
+++ b/src/app/templates/login.html
@@ -18,7 +18,7 @@
 		    {{ render_field(form.username) }}
 		    {{ render_field(form.password) }}
 		  </dl>
-		  <p><input type=submit value=Login>
+		  <p><input type=submit class='button1' value=Login>
 		</form>
 	  </td></tr>
 	</table>
