Ya traza el camino para todos los bares que encuentra en un mapa. Faltaría hacer que cada bar tenga su propio mapa

--- a/src/app/templates/resultados_busqueda.html
+++ b/src/app/templates/resultados_busqueda.html
@@ -48,8 +48,9 @@
                         lng=dirusuario.latlong()[1],
                         markers=locations,
                         maptype_control=0,
-                        zoom = 16,
-                        cls = "mapStyle"
+                        zoom = 15,
+                        cls = "mapStyle",
+                        polylines = polylines
                     )
                 }}
                 <!-- http://brunorocha.org/python/flask/flask-google-maps-plus-how-to-write-a-flask-extension.html -->
