Clases de filtros hechas y andando. Falta hacer la interfaz linda

--- a/src/app/templates/perfil_de_bar.html
+++ b/src/app/templates/perfil_de_bar.html
@@ -14,6 +14,8 @@
     <dl class="skillz">
       <dt>Wifi</dt>
       <dd>{{ perfilDeBar.votos("Wifi") }}</dd>
+      <dt>Enchufes</dt>
+      <dd>{{ perfilDeBar.votos("Enchufes") }}</dd>
       <dt>Comida</dt>
       <dd>{{ perfilDeBar.votos("Comida") }}</dd>
       <dt>Precio</dt>
