Resuelto bug al buscar basura

--- a/src/app/templates/agregar_resultado.html
+++ b/src/app/templates/agregar_resultado.html
@@ -16,7 +16,7 @@
               {% if positivo %}
                  <p>El bar fue agregado exitosamente!</p>
               {% else %}
-                 <p>El bar no ha podido ser agregado :(</p>
+                 <p>El bar no ha podido ser agregado.</p>
               {% endif %}
             {% block content %}{% endblock %}
            </body>
