--- a/src/app/templates/agregar.html
+++ b/src/app/templates/agregar.html
@@ -9,7 +9,8 @@
 	{% from "_formhelpers.html" import render_field %}
 
 	<table id="tabla1" align ="center">
-		<tr><td>
+		<tr><td>                
+                  {% if mod%}
 			<form method=post action="/agregar">
 			    {{ form.csrf_token }}
 			  <dl>
@@ -18,6 +19,12 @@
 			  </dl>
 			  <p><input type=submit class='button1' value=Submit></p>
 			</form>
-	    </td></tr>
+                    <form method=get action="/home">
+                      <input type=submit class='button1' value=Volver>
+                    </form>
+                   {% else %}
+                       <p>Sólo un Mod puede agregar bares.</p>
+                   {% endif %}
+                </td></tr>
 	</table>
 </body>
