--- a/src/app/templates/home.html
+++ b/src/app/templates/home.html
@@ -14,6 +14,9 @@
             <form method=get action="/login">
               <input class="button1" type=submit value=LogIn>
             </form>
+            <form method=get action="/registrar">
+              <input class="button1" type=submit value=Registrar>
+            </form>
           {% else%}
             <form method=get action="/logout">
               <input class="button1" type=submit value=LogOut>
