Terminada mi parte del codigo

--- a/src/app/templates/editar_bar.html
+++ b/src/app/templates/editar_bar.html
@@ -13,9 +13,15 @@
                    {% if mod %}
 			<form method=post action="/editar?barDireccion={{direccion}}">
 			    {{ form.csrf_token }}
-			  <dl>
+			    Nombre actual: {{nombre}}
+ 			  <dl>
+			    {{ render_field(form.nombre_dado) }}
+			  </dl>
+			    Direccion actual: {{direccion}}
+			  <dl >
 			    {{ render_field(form.direccion_dada) }}
 			  </dl>
+
 			  <p><input type=submit class='button1' value=Submit></p>
 			</form>
                    {% else %}
