--- a/src/app/static/css/style.css
+++ b/src/app/static/css/style.css
@@ -55,27 +55,31 @@ table#tabla2{
     color: white;
 }
 
-
+.inline {
+  display: inline-block;
+  overflow: hidden;
+}
 
 .card {
-  position: absolute;
+/*  position: absolute;*/
   top: 50%;
   left: 45%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
 }
-@media only screen and (max-width: 768px) {
+
+/*@media only screen and (max-width: 768px) {
   .card {
     width: 18rem;
   }
-}
+}*/
 .card .panel {
   -webkit-transition: all 0.35s ease-in-out;
   transition: all 0.35s ease-in-out;
   padding: 1.5rem 2rem;
-  /* position: absolute; */
+   position: relative; 
   background-color: #fff;
-  width: 100%;
+  width: 60%;
   height: 100%;
   border: none;
   overflow: hidden;
@@ -167,60 +171,16 @@ table#tabla2{
   background-color: #E83568;
 }
 
-@media only screen and (min-width: 768px) {
-  .card:hover .meta {
-    -webkit-transform: translateX(-69.5%);
-            transform: translateX(-69.5%);
-    border-color: #00a7c9;
-  }
-  .card:hover .info {
-    -webkit-transform: translateX(20%);
-            transform: translateX(20%);
-    width: 150%;
-  }
+table {
+    border-collapse: collapse;
 }
 
-.black_overlay{
-  display: none;
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  z-index:1001;
-  -moz-opacity: 0.8;
-  opacity:.80;
-  filter: alpha(opacity=80);
-}
-
-.answer {
-  display: none;
-  position: absolute;
-  top: 25%;
-  left: 10%;
-  width: 80%;
-  height: 50%;
-  padding: 16px;
-  background-color: white;
-  z-index:1002;
-  overflow: hidden;
-}
-
-.centered-block {
-    display: block;
-    margin: auto;
-    width: 100%;
+td {
+    padding-top: .5em;
+    padding-bottom: .5em;
 }
 
 
-
-
-
-
-
-
-//updated ver
 * {
   box-sizing:border-box;
 }
