--- a/src/app/templates/vista_de_bar.html
+++ b/src/app/templates/vista_de_bar.html
@@ -221,10 +221,24 @@ function goBack() {
       </tr>
       </table>
 
-      <table id="como_llegar" style="display: none">
+      <table id="como_llegar">
         <tr>
           <td>
-            Mapa (Manu metelo aca)
+              <div class="centered-block" id="mapa">
+                {{
+                    googlemap(
+                        "simple-map",
+                        lat=posicionDelUsuario.latlong()[0],
+                        lng=posicionDelUsuario.latlong()[1],
+                        markers=markers,
+                        maptype_control=0,
+                        zoom = 15,
+                        cls = "mapStyle",
+                        polylines = [polyline]
+                    )
+                }}
+                <!-- http://brunorocha.org/python/flask/flask-google-maps-plus-how-to-write-a-flask-extension.html -->
+              </div> 
           </td>
         </tr>
       </table>
