--- a/src/app/templates/editar_bar.html
+++ b/src/app/templates/editar_bar.html
@@ -21,7 +21,7 @@
 			  <p><input type=submit class='button1' value=Submit></p>
 			</form>
                    {% else %}
-                       <p>Sólo un Mod puede agregar bares.</p>
+                       <p>Sólo un Mod puede editar bares.</p>
                    {% endif %}
 	    </td></tr>
 	</table>
