Detalles en el codigo

--- a/src/app/templates/editar_resultado.html
+++ b/src/app/templates/editar_resultado.html
@@ -14,9 +14,9 @@
           <tr><td>
             <hr>
               {% if positivo %}
-                 <p>El bar fue editado exitosamente!</p>
+                 <p>El bar fue editado exitosamente.</p>
               {% else %}
-                 <p>El bar no ha editar correctamente :(</p>
+                 <p>El bar no fue editado correctamente.</p>
               {% endif %}
             {% block content %}{% endblock %}
            </body>
