No estaba apareciendo el botón de borrar un bar

--- a/src/app/templates/resultados_busqueda.html
+++ b/src/app/templates/resultados_busqueda.html
@@ -35,6 +35,8 @@
                   {% if direccion in misBares or mod %}
 
                     ¿Desea <a  href="/editar?barDireccion={{direccion}}">editar</a> los datos del bar?
+
+                    ¿Desea <a  href="/eliminar?barDireccion={{direccion}}&nombre={{nombre}}">eliminar</a> este bar?
                   
                   {% endif %}
                 </div>
