--- a/src/app/templates/eliminar_bar.html
+++ b/src/app/templates/eliminar_bar.html
@@ -12,9 +12,12 @@
     <tr><td>¿Está seguro que desea eliminar a {{ nombre }}?</td></tr>
     <tr>
       <td>
-        <form method=get action="/buscar">
-          <input type=submit class='button1' value=Cancelar>
-        </form>
+        <button onclick="goBack()">Cancelar</button>
+          <script>
+          function goBack() {
+              window.history.back();
+          }
+          </script>      
       </td>
       <td>
         <form method=post action="/eliminar?barDireccion={{direccion}}">
