--- a/src/app/templates/eliminar_bar.html
+++ b/src/app/templates/eliminar_bar.html
@@ -9,20 +9,21 @@
   {% from "_formhelpers.html" import render_field %}
 
   <table id="tabla1" align ="center">
-    <tr><td>¿Está seguro que desea eliminar a {{ nombre }}?</td></tr>
-    <tr>
-      <td>
+    <tr><td>
+      {% if mod %}  
+      <p>¿Está seguro que desea eliminar a {{ nombre }}?</p>
         <button onclick="goBack()">Cancelar</button>
           <script>
           function goBack() {
               window.history.back();
           }
           </script>      
-      </td>
-      <td>
         <form method=post action="/eliminar?barDireccion={{direccion}}">
           <p><input type=submit class='button1' value=Aceptar></p>
         </form>
+                     {% else %}
+                        <p>Sólo un Mod puede eliminar bares.</p>
+                     {% endif %}
       </td></tr>
   </table>
 </body>
