--- a/src/app/templates/vista_de_bar.html
+++ b/src/app/templates/vista_de_bar.html
@@ -1,8 +1,8 @@
 <head>
 <title>ISW1 - TP1</title>
 
-<!--<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">-->
+<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
 
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src="{{ url_for('static', filename='js/index.js') }}"></script>
