--- a/src/app/templates/editar_bar.html
+++ b/src/app/templates/editar_bar.html
@@ -10,7 +10,7 @@
 
 	<table id="tabla1" align ="center">
 		<tr><td>
-                     {% if mod %}
+                     {% if esDuenio or mod %}
 			<form method=post action="/editar?barDireccion={{direccion}}">
 			    {{ form.csrf_token }}
 			    Nombre actual: {{nombre}}
@@ -21,7 +21,7 @@
 			  <p><input type=submit class='button1' value=Submit></p>
 			</form>
                      {% else %}
-                        <p>Sólo un Mod puede editar bares.</p>
+                        <p>No esta habilidato a editar este bar.</p>
                      {% endif %}
 	    </td></tr>
 	</table>
