--- a/src/app/templates/agregar_resultado.html
+++ b/src/app/templates/agregar_resultado.html
@@ -15,6 +15,8 @@
             <hr>
               {% if positivo %}
                  <p>El bar fue agregado exitosamente!</p>
+              {% elif yaExiste %}
+                 <p>Ya existe un bar con la dirección provista.</p>
               {% else %}
                  <p>La dirección provista es inválida.</p>
               {% endif %}
